Adjusted the shapes location art 1

--- a/first-article/direction-1.css
+++ b/first-article/direction-1.css
@@ -112,6 +112,7 @@
 	.author {
 	  border-top: 1px solid black;
 	  border-bottom: 1px solid black;
+	  margin-top: 0;
 	}
   body {
 	font-family: var(--base-font-family-body);
@@ -172,8 +173,9 @@ article a {
 	position: absolute;
 	align-items: center;
 	justify-content: center;
-	top: 2650px;
-	left: -60px;
+	top: 1650px;
+	/* right: -60px; */
+	right:1%;
 	z-index: -1;
 }
 .circle-2 {
@@ -188,7 +190,7 @@ article a {
 	align-items: center;
 	justify-content: center;
 	top: 320px;
-	left: -10px;
+	left: 50%;
 	z-index: 1;	
 }
 .triangle {
@@ -198,14 +200,14 @@ article a {
 	border-bottom: 50px solid transparent;
 	border-left: 100px solid #ffce44;
 }
-/* .triangle-container-2 {
+.triangle-container-2 {
 	display: flex;
 	position: absolute;
 	align-items: center;
 	justify-content: center;
-	top: 3200px;
-	right: -20px;
-	z-index: 1;	
+	top: 2800px;
+	right: 50%;
+	z-index: -10;	
 }
 .triangle-2 {
 	width: 0;
@@ -214,7 +216,7 @@ article a {
 	border-bottom: 50px solid transparent;
 	border-left: 100px solid #ffce44;
 	transform: rotate(45deg); 
-}*/
+}
 .star-container {
 	position: absolute;
 	display: flex;
@@ -248,7 +250,7 @@ article a {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	top: 4650px;
+	top: 6050px;
 	left: 20px;
 	margin: 50px auto;
 	z-index: -1;	
@@ -276,9 +278,9 @@ article a {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	top:1890px;
-	right: -20px;
-	z-index: 1;	
+	top:4100px;
+	right: 7%;
+	z-index: -10;	
 }
 .rectangle {
 	width: 80px;
@@ -297,6 +299,7 @@ article a {
 	padding-left: 5%;
 	padding-right: 5%;
 	margin-top: 10%;
+	margin-bottom: 5%;
 	border-radius: 1rem;
   }
   footer a {
