--- a/second-article/direction-2.css
+++ b/second-article/direction-2.css
@@ -292,6 +292,7 @@ article a {
 	padding-left: 5%;
 	padding-right: 5%;
 	margin-top: 10%;
+	margin-bottom: 5%;
 	border-radius: 1rem;
   }
   footer a {
