--- a/second-article/direction-2.css
+++ b/second-article/direction-2.css
@@ -5,7 +5,7 @@
 
   /* container */
   .container {
-	width: 100vw;
+	width: 97vw;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -17,10 +17,12 @@
 
 /* background-color */
 .h1-background {
-	background-color: rgb(176, 145, 183);
-	margin: -2rem;
+	background-color: skyblue;
+	margin-top: -2rem;
+	margin-left: -2rem;
+	margin-right: -2rem;
 	padding-left: 2rem;
-	padding-right: 2rem;
+	padding-right: 1rem;
 	padding-top: 2rem;
 	padding-bottom: 1rem;
 }
@@ -59,13 +61,15 @@
 	position: relative;
 	z-index: 6;
 	max-width: 80ch;
+	padding-top: 1rem;
+	padding-bottom: 1.5rem;
   }
   h2 {
 	font-size: var(--base-size-h2);
 	font-weight: 500;
-	color: rgb(72, 72, 72); 
+	color: rgb(31, 31, 31); 
 	line-height: 130%;
-	margin-bottom: 2rem;
+	margin-bottom: 1.8rem;
 	position: relative;
 	z-index: 5;
   }
@@ -107,6 +111,8 @@
 	.author {
 	  border-top: 1px solid black;
 	  border-bottom: 1px solid black;
+	  margin-top: 0;
+
 	}
   body {
 	font-family: var(--base-font-family-body);
@@ -168,7 +174,7 @@ article a {
 	align-items: center;
 	justify-content: center;
 	top: 2650px;
-	left: -60px;
+	/* left: ; */
 	z-index: -1;
 }
 .circle-2 {
@@ -198,9 +204,9 @@ article a {
 	position: absolute;
 	align-items: center;
 	justify-content: center;
-	top: 3200px;
-	right: -20px;
-	z-index: 1;	
+	top: 4200px;
+	right: 20%;
+	z-index: -10;	
 }
 .triangle-2 {
 	width: 0;
@@ -243,7 +249,7 @@ article a {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	top: 4650px;
+	top: 5250px;
 	left: 20px;
 	margin: 50px auto;
 	z-index: -1;	
@@ -271,9 +277,9 @@ article a {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	top:1890px;
-	right: -20px;
-	z-index: 1;	
+	top:1350px;
+	right: 10%;
+	z-index: -10;	
 }
 .rectangle {
 	width: 80px;
