--- a/first-article/direction-1.css
+++ b/first-article/direction-1.css
@@ -1,12 +1,12 @@
 * {
-	margin-top: 0.5em;
+	/* margin-top: 0.5em; */
 	box-sizing: border-box;
   }
   
 
 /* container */
 .container {
-	width: 97vw;
+	/* width: 97vw; */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -19,11 +19,12 @@
 /* background-color */
 .h1-background {
 	background-color: rgb(176, 145, 183);
+	/* width: 97vw;  */
 	margin-top: -2rem;
 	margin-left: -2rem;
-	margin-right: -2rem;
+	margin-right: -1.5rem;
 	padding-left: 2rem;
-	padding-right: 1rem;
+	padding-right: 2rem;
 	padding-top: 2rem;
 	padding-bottom: 1rem;
 }
@@ -42,8 +43,8 @@
   .navbar a {
 	border: 2px solid black;
 	border-radius: 9999px;
-	padding-left: 16px;
-	padding-right: 16px;
+	padding-left: 15px;
+	padding-right: 15px;
 	padding-top: 6px;
 	padding-bottom: 6px;
 	margin: 0.3rem;
@@ -51,6 +52,7 @@
 	font-weight: 700;
 	filter: drop-shadow(5px 5px black);
 	display: inline-block;
+	font-size: 1rem;
 }
   
 /* body */
@@ -88,6 +90,7 @@
 	  box-sizing: border-box;
 	  position: relative;
 	  z-index: 6;
+
 	}
 	H4 {
 		font-weight: 500;
@@ -107,7 +110,8 @@
 		font-family: var(--base-font-family-h1);
 		/* margin-left: 1rem; */
 		letter-spacing: 1px;
-		color: rgb(44, 43, 43)
+		color: rgb(44, 43, 43);
+		padding-top: 1em;
 	} 
 	.author {
 	  border-top: 1px solid black;
@@ -127,6 +131,10 @@
   }
   section {
 	line-height: var(--base-line-height);
+	max-width: var(--base-max-width);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
   }
   blockquote {
 	padding-left: 10%;
@@ -316,6 +324,18 @@ article a {
 	margin-left: 70%;  
    }
 
+   /* background-color */
+.h1-background {
+	background-color: rgb(176, 145, 183);
+	/* width: 97vw; */ 
+	margin-top: -2rem;
+	margin-left: -5rem;
+	margin-right: -5rem;
+	padding-left: 2rem;
+	padding-right: 2rem;
+	padding-top: 2rem;
+	padding-bottom: 1rem;
+}
 
 /* body */
 	h1 {
@@ -323,10 +343,43 @@ article a {
 		margin-top: 2rem;
 		margin-bottom: 2rem;
 	}
-   body {
-	margin-left: 2%;
-   }
 
+	
+	h3 {
+		/* font-family: var(--base-font-family-body);
+		font-size: 2rem;
+		font-weight: 900;
+		line-height: 100%;
+		color:black; 
+		margin-top: 2rem;
+		margin-bottom: 1rem;
+		letter-spacing: -1px;
+		padding-bottom: 1rem; */
+		/* border-bottom: 2px solid black; */
+		/* box-sizing: border-box;
+		position: relative;
+		z-index: 6; */
+		margin-left: 24%;
+	}
+   /* body {
+	margin-left: 2%;
+   } */
+
+   .author {
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
+	margin-top: 0;
+	margin-left: 24%;
+  }
+
+   section {
+	line-height: var(--base-line-height);
+	max-width: var(--base-max-width);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-left: 24%;
+  }
 
   /* shapes  */
 .circle-container {
