--- a/second-article/direction-2.css
+++ b/second-article/direction-2.css
@@ -1,11 +1,10 @@
 * {
-	margin-top: 0.5em;
+	box-sizing: border-box;
   }
   
 
   /* container */
   .container {
-	width: 97vw;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -20,7 +19,7 @@
 	background-color: skyblue;
 	margin-top: -2rem;
 	margin-left: -2rem;
-	margin-right: -2rem;
+	margin-right: -1.5rem;
 	padding-left: 2rem;
 	padding-right: 1rem;
 	padding-top: 2rem;
@@ -41,8 +40,8 @@
   .navbar a {
 	border: 2px solid black;
 	border-radius: 9999px;
-	padding-left: 16px;
-	padding-right: 16px;
+	padding-left: 15px;
+	padding-right: 15px;
 	padding-top: 6px;
 	padding-bottom: 6px;
 	margin: 0.3rem;
@@ -50,6 +49,7 @@
 	font-weight: 700;
 	filter: drop-shadow(5px 5px black);
 	display: inline-block;
+	font-size: 1rem;
 }
   
 /* body */
@@ -104,9 +104,10 @@
 		text-align: center;
 		font-size: 1.2rem;
 		font-family: var(--base-font-family-h1);
-		margin-left: 1rem;
+		/* margin-left: 1rem; */
 		letter-spacing: 1px;
-		color: rgb(44, 43, 43)
+		color: rgb(44, 43, 43);
+		padding-top: 1em;
 	} 
 	.author {
 	  border-top: 1px solid black;
@@ -314,6 +315,18 @@ article a {
 	margin-left: 70%;  
    }
 
+     /* background-color */
+.h1-background {
+	background-color: skyblue;
+	/* width: 97vw; */ 
+	margin-top: -2rem;
+	margin-left: -5rem;
+	margin-right: -5rem;
+	padding-left: 2rem;
+	padding-right: 2rem;
+	padding-top: 2rem;
+	padding-bottom: 1rem;
+}
 
 /* body */
 	h1 {
@@ -321,9 +334,31 @@ article a {
 		margin-top: 2rem;
 		margin-bottom: 2rem;
 	}
-   body {
-	margin-left: 2%;
-   }
+   
+	h3 {
+		max-width: var(--base-max-width);
+		margin: auto;
+	}
+	h5 {
+		text-align: left;
+	}
+   .author {
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
+	margin-top: 0;
+	max-width: var(--base-max-width);
+	margin: auto;
+  }
+
+   section {
+	line-height: var(--base-line-height);
+	max-width: var(--base-max-width);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	max-width: var(--base-max-width);
+	margin: auto;
+  }
 
 
   /* shapes  */
