--- a/first-article/direction-1.css
+++ b/first-article/direction-1.css
@@ -50,6 +50,7 @@
 	filter: drop-shadow(5px 5px black);
 	display: inline-block;
 	font-size: 1rem;
+	transition: 0.3s;
 }
   
 /* body */
@@ -321,6 +322,24 @@ article a {
 	margin-left: 70%;  
    }
 
+/* hover-effect */
+.navbar a:hover {
+  border: 2px solid black;
+  border-radius: 9999px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  margin: 0.3rem;
+  background-color: rgb(255, 255, 255);
+  font-weight: 700;
+  filter: drop-shadow(5px 5px rgb(0, 0, 0));
+  display: inline-block;
+  font-size: 1rem;
+  transform: translate(-10px,5px);
+}
+
+
    /* background-color */
 .h1-background {
 	background-color: rgb(176, 145, 183);
@@ -343,7 +362,7 @@ article a {
 	}
 	h3 {
 		max-width: var(--base-max-width);
-		margin: auto;
+		text-align: left;
 	}
 h5 {
 	text-align: left;
@@ -361,7 +380,7 @@ h5 {
 	max-width: var(--base-max-width);
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: normal;
 	max-width: var(--base-max-width);
 	margin: auto;
   }
@@ -398,6 +417,7 @@ h5 {
 	background-color: skyblue;
 	border-radius: 50%;
 }
+
 .triangle-container {
 	display: flex;
 	position: absolute;
@@ -502,4 +522,4 @@ h5 {
 .star-2:nth-child(7) { transform: rotate(240deg); }
 .star-2:nth-child(8) { transform: rotate(280deg); }
 .star-2:nth-child(9) { transform: rotate(320deg); }
-}
+  }
