--- a/landing.css
+++ b/landing.css
@@ -173,6 +173,9 @@ header {
 	nav {
 		  margin-left: 70%;  
 		}
+
+
+
 h1 {
 	font-size: 5.5rem;
 	padding-top: 8rem;
@@ -248,6 +251,7 @@ transform: translateY(-10px);
 	height: calc(100px * 1.5);
 	background-color: skyblue;
 	border-radius: 50%;
+	transform: translateZ(-3px)scale(4);
 }
 
 .triangle-container {
