--- a/second-article/direction-2.css
+++ b/second-article/direction-2.css
@@ -50,6 +50,7 @@
 	filter: drop-shadow(5px 5px black);
 	display: inline-block;
 	font-size: 1rem;
+	transition: 0.3s;
 }
   
 /* body */
@@ -314,6 +315,23 @@ article a {
   nav {
 	margin-left: 70%;  
    }
+
+/* hover-effect */
+.navbar a:hover {
+	border: 2px solid black;
+	border-radius: 9999px;
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-top: 6px;
+	padding-bottom: 6px;
+	margin: 0.3rem;
+	background-color: rgb(255, 255, 255);
+	font-weight: 700;
+	filter: drop-shadow(5px 5px rgb(0, 0, 0));
+	display: inline-block;
+	font-size: 1rem;
+	transform: translate(-10px,5px);
+  }
 
      /* background-color */
 .h1-background {
